# pygamman

./: .gitignore  meson.build  pyproject.toml
examples/: neutral_density_example.py
pygamman/fortran/: gamman.f90
